change main docker file to be for full private net

--- a/Dockerfile_single
+++ b/Dockerfile_single
@@ -2,7 +2,7 @@
 FROM golang:1-alpine as builder
 
 RUN set -x \
-    && apk add --no-cache git make screen expect \
+    && apk add --no-cache git make \
     && mkdir -p /tmp
 
 COPY . /neo-go
@@ -17,9 +17,6 @@ RUN make
 # Executable image
 FROM alpine
 
-RUN apk add --no-cache screen expect
-
-
 ARG   VERSION
 LABEL version=$VERSION
 
@@ -28,10 +25,9 @@ WORKDIR /
 COPY --from=builder /neo-go/config /config
 COPY --from=builder /neo-go/.docker/chain.acc /chain.acc
 COPY --from=builder /neo-go/.docker/privnet-entrypoint.sh /usr/bin/privnet-entrypoint.sh
-COPY --from=builder /neo-go/.docker/multi-privnet-entrypoint.sh /usr/bin/multi-privnet-entrypoint.sh
 COPY --from=builder /neo-go/bin/neo-go /usr/bin/neo-go
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 
-ENTRYPOINT ["/usr/bin/multi-privnet-entrypoint.sh"]
+ENTRYPOINT ["/usr/bin/privnet-entrypoint.sh"]
 
 CMD ["node", "--config-path", "/config", "--privnet"]
